--- a/SmartRestaurant/SmartRestaurant/Areas/Restaurant/Views/Czxxbj/Update.cshtml
+++ b/SmartRestaurant/SmartRestaurant/Areas/Restaurant/Views/Czxxbj/Update.cshtml
@@ -14,7 +14,7 @@
         <input id="czxxid" name="czxxid" class="form-control" type="hidden">
         <div class="form-group">
             <label class="col-sm-2 control-label">桌号:</label>
-            <div class="col-sm-10"><input id="czxxzh" name="czxxzh" class="form-control" type="text" placeholder="请输入菜品类型名称"></div>
+            <div class="col-sm-10"><input id="czxxzh" name="czxxzh" class="form-control" type="text" placeholder="请输入桌号"></div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">餐桌类型:</label>
@@ -28,7 +28,7 @@
         </div>*@
         <div class="form-group">
             <label class="col-sm-2 control-label">描述:</label>
-            <div class="col-sm-10"><input id="czxxms" name="czxxms" class="form-control" type="text" placeholder="请输入菜品类型描述"></div>
+            <div class="col-sm-10"><input id="czxxms" name="czxxms" class="form-control" type="text" placeholder="请输入餐桌描述"></div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">序号:</label>
