--- a/SmartRestaurant/SmartRestaurant/Areas/Restaurant/Views/Ddgl/Update.cshtml
+++ b/SmartRestaurant/SmartRestaurant/Areas/Restaurant/Views/Ddgl/Update.cshtml
@@ -1,36 +1,24 @@
 ﻿
 @{
-    ViewBag.Title = "Insert";
+    ViewBag.Title = "Update";
 }
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>新增物料信息</title>
+    <title>新增菜品类型</title>
 </head>
 <body>
     <form id="team" class="form-horizontal" role="form">
-
+        <input id="cplxid" name="cplxid" class="form-control" type="hidden">
         <div class="form-group">
             <label class="col-sm-2 control-label">名称:</label>
-            <div class="col-sm-10"><input id="wlxxname" name="wlxxname" class="form-control" type="text" placeholder="请输入物料类型名称"></div>
-        </div>
-        <div class="form-group">
-            <label class="col-sm-2 control-label">物料类型:</label>
-            <div class="col-sm-10">
-                <select id="wllx" name="wllx" class="form-control"></select>
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-sm-2 control-label">计量单位:</label>
-            <div class="col-sm-10">
-                <select id="zd" name="zd" class="form-control"></select>
-            </div>
+            <div class="col-sm-10"><input id="cplxmc" name="cplxmc" class="form-control" type="text" placeholder="请输入菜品类型名称"></div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">描述:</label>
-            <div class="col-sm-10"><input id="wlxxms" name="wlxxms" class="form-control" type="text" placeholder="请输入物料类型描述"></div>
+            <div class="col-sm-10"><input id="cplxms" name="cplxms" class="form-control" type="text" placeholder="请输入菜品类型描述"></div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">序号:</label>
@@ -54,12 +42,10 @@
                 $('.spinner input').val(parseInt($('.spinner input').val(), 10) - 1);
             });
             var obj = @Html.Raw(Json.Encode(Model));
-            for (var i = 0; i < obj.Data.wllx.length; i++) {
-                $("#wllx").append("<option value=" +obj.Data.wllx[i].id + ">" + obj.Data.wllx[i].name + "</option>");
-            }
-            for (var i = 0; i < obj.Data.zd.length; i++) {
-                $("#zd").append("<option value=" +obj.Data.zd[i].id + ">" + obj.Data.zd[i].name + "</option>");
-            }
+            $("#cplxid").val(obj.Data.cplx.id);
+            $("#cplxmc").val(obj.Data.cplx.name);
+            $("#cplxms").val(obj.Data.cplx.remark);
+            $("#cplxxh").val(obj.Data.cplx.rank);
         });
     </script>
 </body>
