--- a/SmartRestaurant/SmartRestaurant/Areas/Restaurant/Views/Wllxbj/Insert.cshtml
+++ b/SmartRestaurant/SmartRestaurant/Areas/Restaurant/Views/Wllxbj/Insert.cshtml
@@ -7,18 +7,18 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>新增菜品类型</title>
+    <title>新增物料类型</title>
 </head>
 <body>
     <form id="team" class="form-horizontal" role="form">
 
         <div class="form-group">
             <label class="col-sm-2 control-label">名称:</label>
-            <div class="col-sm-10"><input id="wllxmc" name="wllxmc" class="form-control" type="text" placeholder="请输入菜品类型名称"></div>
+            <div class="col-sm-10"><input id="wllxmc" name="wllxmc" class="form-control" type="text" placeholder="请输入物料类型名称"></div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">描述:</label>
-            <div class="col-sm-10"><input id="wllxms" name="wllxms" class="form-control" type="text" placeholder="请输入菜品类型描述"></div>
+            <div class="col-sm-10"><input id="wllxms" name="wllxms" class="form-control" type="text" placeholder="请输入物料类型描述"></div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">序号:</label>
