--- a/SmartRestaurant/SmartRestaurant/Areas/Restaurant/Views/Wlxxbj/Update.cshtml
+++ b/SmartRestaurant/SmartRestaurant/Areas/Restaurant/Views/Wlxxbj/Update.cshtml
@@ -14,7 +14,7 @@
         <input id="wlxxid" name="wlxxid" class="form-control" type="hidden">
         <div class="form-group">
             <label class="col-sm-2 control-label">名称:</label>
-            <div class="col-sm-10"><input id="wlxxname" name="wlxxname" class="form-control" type="text" placeholder="请输入菜品类型名称"></div>
+            <div class="col-sm-10"><input id="wlxxname" name="wlxxname" class="form-control" type="text" placeholder="请输入物料类型名称"></div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">物料类型:</label>
@@ -30,7 +30,7 @@
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">描述:</label>
-            <div class="col-sm-10"><input id="wlxxms" name="wlxxms" class="form-control" type="text" placeholder="请输入菜品类型描述"></div>
+            <div class="col-sm-10"><input id="wlxxms" name="wlxxms" class="form-control" type="text" placeholder="请输入物料类型描述"></div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">序号:</label>
