--- a/SmartRestaurant/SmartRestaurant/Areas/Restaurant/Views/Yhgl/Insert.cshtml
+++ b/SmartRestaurant/SmartRestaurant/Areas/Restaurant/Views/Yhgl/Insert.cshtml
@@ -7,36 +7,31 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>新增物料信息</title>
+    <title>新增用户</title>
 </head>
 <body>
     <form id="team" class="form-horizontal" role="form">
-
         <div class="form-group">
-            <label class="col-sm-2 control-label">名称:</label>
-            <div class="col-sm-10"><input id="wlxxname" name="wlxxname" class="form-control" type="text" placeholder="请输入物料类型名称"></div>
+            <label class="col-sm-2 control-label">用户名:</label>
+            <div class="col-sm-10"><input id="yhgluname" name="yhgluname" class="form-control" type="text" placeholder="请输入用户名"></div>
         </div>
         <div class="form-group">
-            <label class="col-sm-2 control-label">物料类型:</label>
-            <div class="col-sm-10">
-                <select id="wllx" name="wllx" class="form-control"></select>
-            </div>
+            <label class="col-sm-2 control-label">密码:</label>
+            <div class="col-sm-10"><input id="yhglpasswd" name="yhglpasswd" class="form-control" type="text" placeholder="请输入密码"></div>
         </div>
         <div class="form-group">
-            <label class="col-sm-2 control-label">计量单位:</label>
-            <div class="col-sm-10">
-                <select id="zd" name="zd" class="form-control"></select>
-            </div>
+            <label class="col-sm-2 control-label">昵称:</label>
+            <div class="col-sm-10"><input id="yhglmc" name="yhglmc" class="form-control" type="text" placeholder="请输入昵称"></div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">描述:</label>
-            <div class="col-sm-10"><input id="wlxxms" name="wlxxms" class="form-control" type="text" placeholder="请输入物料类型描述"></div>
+            <div class="col-sm-10"><input id="yhglms" name="yhglms" class="form-control" type="text" placeholder="请输入用户描述"></div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">序号:</label>
             <div class="col-sm-10">
                 <div class="input-group spinner">
-                    <input id="cplxxh" name="cplxxh" type="number" class="form-control" value="1" style="text-align:left">
+                    <input id="yhglxh" name="yhglxh" type="number" class="form-control" value="1" style="text-align:left">
                     <div class="input-group-btn-vertical">
                         <button class="btn btn-default" type="button"><i class="glyphicon glyphicon-chevron-up"></i></button>
                         <button class="btn btn-default" type="button"><i class="glyphicon glyphicon-chevron-down"></i></button>
@@ -53,15 +48,8 @@
             $('.spinner .btn:last-of-type').on('click', function () {
                 $('.spinner input').val(parseInt($('.spinner input').val(), 10) - 1);
             });
-            var obj = @Html.Raw(Json.Encode(Model));
-            for (var i = 0; i < obj.Data.wllx.length; i++) {
-                $("#wllx").append("<option value=" +obj.Data.wllx[i].id + ">" + obj.Data.wllx[i].name + "</option>");
-            }
-            for (var i = 0; i < obj.Data.zd.length; i++) {
-                $("#zd").append("<option value=" +obj.Data.zd[i].id + ">" + obj.Data.zd[i].name + "</option>");
-            }
         });
     </script>
-</body>
+ </body>
 </html>
 
