--- a/SmartRestaurant/SmartRestaurant/Areas/Restaurant/Views/Cpsj/Index.cshtml
+++ b/SmartRestaurant/SmartRestaurant/Areas/Restaurant/Views/Cpsj/Index.cshtml
@@ -34,6 +34,11 @@
                     <div class="col-lg-12">
                         <div class="input-group">
                             <span class="input-group-btn">
+                                <select id="sfsj-btn" class="selectpicker show-tick" data-width="auto">
+                                    <option value="2">所有</option>
+                                    <option value="1">已上架</option>
+                                    <option value="0">未上架</option>
+                                </select>
                                 <select id="cplx-btn" class="selectpicker show-tick" data-width="auto"></select>
                             </span>
                             <input id="search-input" type="text" class="form-control" placeholder="请输入菜品名称">
@@ -77,47 +82,55 @@
                 $("#list-group").css("height", $(window).height() - $("#panel-head").height() - $("#pageSize").height() - 100);
                 var limit = parseInt($("#list-group").height() / 165);
                 //重新规划页面
+                $("#sfsj-btn").val(2);
                 $("#cplx-btn").val(0);
                 $("#search-input").val("");
                 $("#page").val(1);
-                setList(limit, 0, $("#search-input").val(), $("#cplx-btn").val());
+                setList(limit, 0, $("#search-input").val(), $("#cplx-btn").val(),$("#sfsj-btn").val());
         });
         $("#cplx-btn").change(function(){
             $("#search-input").val("");
             var limit = parseInt($("#list-group").height() / 165);
             $("#page").val(1);
-            setList(limit, 0, "", $(this).val());
+            setList(limit, 0, "", $(this).val(),$("#sfsj-btn").val());
+        });
+        $("#sfsj-btn").change(function(){
+            $("#search-input").val("");
+            var limit = parseInt($("#list-group").height() / 165);
+            $("#page").val(1);
+            setList(limit, 0, "", $("#cplx-btn").val(),$(this).val());
         });
         $("#search-btn").click(function(){
             var limit = parseInt($("#list-group").height() / 165);
             $("#page").val(1);
-            setList(limit, 0, $("#search-input").val(), $("#cplx-btn").val());
+            setList(limit, 0, $("#search-input").val(), $("#cplx-btn").val(),$("#sfsj-btn").val());
         });
         $("#previous").click(function(){
             var limit = parseInt($("#list-group").height() / 165);
             var page = parseInt($("#page").val())-1;
             $("#page").val(page);
-            setList(limit, (page-1)*limit,  $("#search-input").val(), $("#cplx-btn").val());
+            setList(limit, (page-1)*limit,  $("#search-input").val(), $("#cplx-btn").val(),$("#sfsj-btn").val());
         });
         $("#next").click(function(){
             var limit = parseInt($("#list-group").height() / 165);
             var page = parseInt($("#page").val())+1;
             $("#page").val(page);
-            setList(limit, (page-1)*limit, $("#search-input").val(), $("#cplx-btn").val());
+            setList(limit, (page-1)*limit, $("#search-input").val(), $("#cplx-btn").val(),$("#sfsj-btn").val());
         });
 
         $(function () {
             //alert($("#list-group").height() / 165);
             var limit = parseInt($("#list-group").height() / 165);
             $("#page").val(1);
-            setList(limit, 0, $("#search-input").val(), $("#cplx-btn").val());
+            setList(limit, 0, $("#search-input").val(), $("#cplx-btn").val(),$("#sfsj-btn").val());
         });
-        function setList(limit, offset, search, type) {//页面行数，页码，搜索内容，类型
+        function setList(limit, offset, search, type ,sfsj) {//页面行数，起始行，搜索内容，类型 上架状态
             var data = {
                 limit : limit,
                 offset : offset,
                 search: search,
-                type : type
+                type : type,
+                sfsj : sfsj
             }
             $.ajax({
                 type: "post",
@@ -153,12 +166,10 @@
                                                 + "<p>" + result.rows[i].remark + "</p>"
                                             + "</div>"
                                             + "<div class='media-right'>"
-                        if(result.rows[i].sfsj==0)//未上架 上架 即 insert
-                            html = html + "<button class='btn btn-info' onclick='Insert(" + result.rows[i].id + ")'>上架</button></div></li></ul></div>";
-                        else{//已上架 则显示修改数量和下架 修改数量则是update 下架则是delete
-                            html = html+ "<button class='btn btn-info' onclick='Update(" + result.rows[i].id + ")'>修改数量</button>"
-                                    + "<button class='btn btn-info' onclick='Delete(" + result.rows[i].id + ")'>下架</button>"
-                                    + "</div></li></ul></div>";
+                        if(result.rows[i].sfsj==0)//此处仅是设置菜品是否可以上架销售，上架的数量在销售计划中配置
+                            html = html + "<button class='btn btn-info' onclick='toSj(" + result.rows[i].id + ")'>上架</button></div></li></ul></div>";
+                        else{
+                            html = html+ "<button class='btn btn-danger' onclick='toXj(" + result.rows[i].id + ")'>下架</button></div></li></ul></div>";
                         }
                         $("#list-group").append(html);
                     };
@@ -175,14 +186,43 @@
                 keyboard: true
             })
         }
-        function Insert(cpid){
-
+        function toSj(cpid){
+            update(cpid,1);//修改sfsj是否上架的状态为1，使其上架
         }
-        function Update(cpid){
-        
+        function toXj(cpid){//修改sfsj是否上架的状态为0，使其下架
+            update(cpid,0);
         }
-        function Delete(cpid){
-        
+        function update(cpid,sfsj){//修改sfsj/是否上架的状态 0为下架 1为上架
+            data={ 
+                    cpid:cpid,
+                    sfsj:sfsj
+                };
+            $.ajax({
+                type: "POST",
+                url: 'Cpsj/Updating',
+                data: data,
+                dataType: "json",
+                success: function (result) {
+                    if (result.result == "success") {
+                        if(sfsj==0)//下架成功
+                            success_dialog("菜品下架成功");
+                        else//上架成功
+                            success_dialog("菜品上架成功");
+                        var limit = parseInt($("#list-group").height() / 165);
+                        var page = parseInt($("#page").val())
+                        setList(limit, (page-1)*limit, $("#search-input").val(), $("#cplx-btn").val());
+                    }
+                    else {
+                        if(sfsj==0)//下架
+                            danger_dialog("菜品下架失败，请重试");
+                        else//上架
+                            danger_dialog("菜品上架失败，请重试");
+                    }
+                },
+                error: function () {
+                    error();
+                }
+            });
         }
     </script>
 </body>
