--- a/SmartRestaurant/SmartRestaurant/Areas/Restaurant/Views/Ddgl/Insert.cshtml
+++ b/SmartRestaurant/SmartRestaurant/Areas/Restaurant/Views/Ddgl/Insert.cshtml
@@ -9,28 +9,97 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>新增菜品类型</title>
 </head>
+
 <body>
     <form id="team" class="form-horizontal" role="form">
 
         <div class="form-group">
-            <label class="col-sm-2 control-label">名称:</label>
-            <div class="col-sm-10"><input id="cplxmc" name="cplxmc" class="form-control" type="text" placeholder="请输入菜品类型名称"></div>
+            <label class="col-sm-2 control-label">餐桌ID:</label>
+            <div class="col-sm-10"><input id="ddxxczxx_id" name="ddxxczxx_id" class="form-control" type="text" placeholder="请输入菜品类型名称"></div>
         </div>
-        <div class="form-group">
-            <label class="col-sm-2 control-label">描述:</label>
-            <div class="col-sm-10"><input id="cplxms" name="cplxms" class="form-control" type="text" placeholder="请输入菜品类型描述"></div>
-        </div>
-        <div class="form-group">
-            <label class="col-sm-2 control-label">序号:</label>
-            <div class="col-sm-10">
-                <div class="input-group spinner">
-                    <input id="cplxxh" name="cplxxh" type="number" class="form-control" value="1" style="text-align:left">
-                    <div class="input-group-btn-vertical">
-                        <button class="btn btn-default" type="button"><i class="glyphicon glyphicon-chevron-up"></i></button>
-                        <button class="btn btn-default" type="button"><i class="glyphicon glyphicon-chevron-down"></i></button>
-                    </div>
+        @*<div class="form-group">
+            <label class="col-sm-2 control-label">创建时间:</label>
+            <div class="col-sm-10"><input id="ddxxcjsj" name="ddxxcjsj" class="form-control" type="text" placeholder="请输入菜品类型描述"></div>
+        </div>*@
+        <div class='col-sm-6'>
+            <div class="form-group">
+                <label>创建时间</label>
+                <!--指定 date标记-->
+                <div class='input-group date' id='ddxxcjsj'>
+                    <input type='text' class="form-control" name="ddxxcjsj"/>
+                    <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-calendar"></span>
+                    </span>
                 </div>
             </div>
+        </div>  
+        <div class="form-group">
+            <label class="col-sm-2 control-label">创建人:</label>
+            <div class="col-sm-10"><input id="ddxxcjr" name="ddxxcjr" class="form-control" type="text" placeholder="请输入菜品类型描述"></div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label">备注:</label>
+            <div class="col-sm-10"><input id="ddxxremark" name="ddxxremark" class="form-control" type="text" placeholder="请输入菜品类型描述"></div>
+        </div>
+        @*<div class="form-group">
+            <label class="col-sm-2 control-label">接单时间:</label>
+            <div class="col-sm-10"><input id="ddxxjdsj" name="ddxxjdsj" class="form-control" type="text" placeholder="请输入菜品类型描述"></div>
+        </div>*@
+        <div class='col-sm-6'>
+            <div class="form-group">
+                <label>接单时间</label>
+                <!--指定 date标记-->
+                <div class='input-group date' id='ddxxjdsj'>
+                    <input type='text' class="form-control" name="ddxxjdsj" />
+                    <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-calendar"></span>
+                    </span>
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label">接单人:</label>
+            <div class="col-sm-10"><input id="ddxxjdr" name="ddxxjdr" class="form-control" type="text" placeholder="请输入菜品类型描述"></div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label">接单备注:</label>
+            <div class="col-sm-10"><input id="ddxxjd_remark" name="ddxxjd_remark" class="form-control" type="text" placeholder="请输入菜品类型描述"></div>
+        </div>
+        @*<div class="form-group">
+            <label class="col-sm-2 control-label">付款时间:</label>
+            <div class="col-sm-10"><input id="ddxxfksj" name="ddxxfksj" class="form-control" type="text" placeholder="请输入菜品类型描述"></div>
+        </div>*@
+        <div class='col-sm-6'>
+            <div class="form-group">
+                <label>付款时间</label>
+                <!--指定 date标记-->
+                <div class='input-group date' id='ddxxfksj'>
+                    <input type='text' class="form-control" name="ddxxfksj" />
+                    <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-calendar"></span>
+                    </span>
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label">付款人:</label>
+            <div class="col-sm-10"><input id="ddxxfkr" name="ddxxfkr" class="form-control" type="text" placeholder="请输入菜品类型描述"></div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label">应需付款:</label>
+            <div class="col-sm-10"><input id="ddxxyxfk" name="ddxxyxfk" class="form-control" type="text" placeholder="请输入菜品类型描述"></div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label">实际付款:</label>
+            <div class="col-sm-10"><input id="ddxxsjfk" name="ddxxsjfk" class="form-control" type="text" placeholder="请输入菜品类型描述"></div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label">状态:</label>
+            <div class="col-sm-10"><input id="ddxxzd_id" name="ddxxzd_id" class="form-control" type="text" placeholder="请输入菜品类型描述"></div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label">评价:</label>
+            <div class="col-sm-10"><input id="ddxxpj" name="ddxxpj" class="form-control" type="text" placeholder="请输入菜品类型描述"></div>
         </div>
     </form>
     <script>
