--- a/SmartRestaurant/SmartRestaurant/Areas/Restaurant/Views/Ddgl/Insert.cshtml
+++ b/SmartRestaurant/SmartRestaurant/Areas/Restaurant/Views/Ddgl/Insert.cshtml
@@ -9,97 +9,80 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>新增菜品类型</title>
 </head>
-
 <body>
     <form id="team" class="form-horizontal" role="form">
 
         <div class="form-group">
             <label class="col-sm-2 control-label">餐桌ID:</label>
-            <div class="col-sm-10"><input id="ddxxczxx_id" name="ddxxczxx_id" class="form-control" type="text" placeholder="请输入菜品类型名称"></div>
+            <div class="col-sm-10"><input id="ddxxczxx_id" name="ddxxczxx_id" class="form-control" type="text" placeholder="请输入餐桌ID"></div>
         </div>
         @*<div class="form-group">
             <label class="col-sm-2 control-label">创建时间:</label>
             <div class="col-sm-10"><input id="ddxxcjsj" name="ddxxcjsj" class="form-control" type="text" placeholder="请输入菜品类型描述"></div>
         </div>*@
-        <div class='col-sm-6'>
-            <div class="form-group">
-                <label>创建时间</label>
-                <!--指定 date标记-->
-                <div class='input-group date' id='ddxxcjsj'>
-                    <input type='text' class="form-control" name="ddxxcjsj"/>
-                    <span class="input-group-addon">
-                        <span class="glyphicon glyphicon-calendar"></span>
-                    </span>
-                </div>
-            </div>
-        </div>  
+
+        <div class="form-group">
+            <label class="col-sm-2 control-label">创建时间</label>
+            <!--指定 date标记-->
+            <div class="col-sm-10"><input type='text' class="form-control" id='ddxxcjsj' name="ddxxcjsj"/></div>
+        </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">创建人:</label>
-            <div class="col-sm-10"><input id="ddxxcjr" name="ddxxcjr" class="form-control" type="text" placeholder="请输入菜品类型描述"></div>
+            <div class="col-sm-10"><input id="ddxxcjr" name="ddxxcjr" class="form-control" type="text" placeholder="请输入创建人"></div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">备注:</label>
-            <div class="col-sm-10"><input id="ddxxremark" name="ddxxremark" class="form-control" type="text" placeholder="请输入菜品类型描述"></div>
+            <div class="col-sm-10"><input id="ddxxremark" name="ddxxremark" class="form-control" type="text" placeholder="请输入备注"></div>
         </div>
         @*<div class="form-group">
             <label class="col-sm-2 control-label">接单时间:</label>
             <div class="col-sm-10"><input id="ddxxjdsj" name="ddxxjdsj" class="form-control" type="text" placeholder="请输入菜品类型描述"></div>
         </div>*@
-        <div class='col-sm-6'>
+
             <div class="form-group">
-                <label>接单时间</label>
+                <label class="col-sm-2 control-label">接单时间</label>
                 <!--指定 date标记-->
-                <div class='input-group date' id='ddxxjdsj'>
-                    <input type='text' class="form-control" name="ddxxjdsj" />
-                    <span class="input-group-addon">
-                        <span class="glyphicon glyphicon-calendar"></span>
-                    </span>
-                </div>
+                <div class="col-sm-10"><input type='text' class="form-control" id='ddxxjdsj' name="ddxxjdsj" /></div>
             </div>
-        </div>
+
         <div class="form-group">
             <label class="col-sm-2 control-label">接单人:</label>
-            <div class="col-sm-10"><input id="ddxxjdr" name="ddxxjdr" class="form-control" type="text" placeholder="请输入菜品类型描述"></div>
+            <div class="col-sm-10"><input id="ddxxjdr" name="ddxxjdr" class="form-control" type="text" placeholder="请输入接单人"></div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">接单备注:</label>
-            <div class="col-sm-10"><input id="ddxxjd_remark" name="ddxxjd_remark" class="form-control" type="text" placeholder="请输入菜品类型描述"></div>
+            <div class="col-sm-10"><input id="ddxxjd_remark" name="ddxxjd_remark" class="form-control" type="text" placeholder="请输入接单备注"></div>
         </div>
         @*<div class="form-group">
             <label class="col-sm-2 control-label">付款时间:</label>
             <div class="col-sm-10"><input id="ddxxfksj" name="ddxxfksj" class="form-control" type="text" placeholder="请输入菜品类型描述"></div>
         </div>*@
-        <div class='col-sm-6'>
+
             <div class="form-group">
-                <label>付款时间</label>
+                <label class="col-sm-2 control-label">付款时间</label>
                 <!--指定 date标记-->
-                <div class='input-group date' id='ddxxfksj'>
-                    <input type='text' class="form-control" name="ddxxfksj" />
-                    <span class="input-group-addon">
-                        <span class="glyphicon glyphicon-calendar"></span>
-                    </span>
-                </div>
+                <div class="col-sm-10"><input type='text' class="form-control" id='ddxxfksj' name="ddxxfksj" /></div>
             </div>
-        </div>
+ 
         <div class="form-group">
             <label class="col-sm-2 control-label">付款人:</label>
-            <div class="col-sm-10"><input id="ddxxfkr" name="ddxxfkr" class="form-control" type="text" placeholder="请输入菜品类型描述"></div>
+            <div class="col-sm-10"><input id="ddxxfkr" name="ddxxfkr" class="form-control" type="text" placeholder="请输入付款人姓名"></div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">应需付款:</label>
-            <div class="col-sm-10"><input id="ddxxyxfk" name="ddxxyxfk" class="form-control" type="text" placeholder="请输入菜品类型描述"></div>
+            <div class="col-sm-10"><input id="ddxxyxfk" name="ddxxyxfk" class="form-control" type="text" placeholder="请输入应需付款金额"></div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">实际付款:</label>
-            <div class="col-sm-10"><input id="ddxxsjfk" name="ddxxsjfk" class="form-control" type="text" placeholder="请输入菜品类型描述"></div>
+            <div class="col-sm-10"><input id="ddxxsjfk" name="ddxxsjfk" class="form-control" type="text" placeholder="请输入实际付款金额"></div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">状态:</label>
-            <div class="col-sm-10"><input id="ddxxzd_id" name="ddxxzd_id" class="form-control" type="text" placeholder="请输入菜品类型描述"></div>
+            <div class="col-sm-10"><input id="ddxxzd_id" name="ddxxzd_id" class="form-control" type="text" placeholder="请输入订单状态"></div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">评价:</label>
-            <div class="col-sm-10"><input id="ddxxpj" name="ddxxpj" class="form-control" type="text" placeholder="请输入菜品类型描述"></div>
+            <div class="col-sm-10"><input id="ddxxpj" name="ddxxpj" class="form-control" type="text" placeholder="请输入客户评价"></div>
         </div>
     </form>
     <script>
@@ -110,6 +93,19 @@
             $('.spinner .btn:last-of-type').on('click', function () {
                 $('.spinner input').val(parseInt($('.spinner input').val(), 10) - 1);
             });
+            $('#ddxxcjsj').datetimepicker({
+                format: 'YYYY/MM/DD HH:mm:ss',
+                locale: 'zh-cn'
+            });
+            $('#ddxxjdsj').datetimepicker({
+                format: 'YYYY/MM/DD HH:mm:ss',
+                locale: 'zh-cn'
+            });
+            $('#ddxxfksj').datetimepicker({
+                format: 'YYYY/MM/DD HH:mm:ss',
+                locale: 'zh-cn'
+            });
+
         });
     </script>
  </body>
