--- a/SmartRestaurant/SmartRestaurant/Areas/Restaurant/Views/Jsgl/Index.cshtml
+++ b/SmartRestaurant/SmartRestaurant/Areas/Restaurant/Views/Jsgl/Index.cshtml
@@ -38,6 +38,9 @@
                 <button id="btn_delete" type="button" class="btn btn-default" href="Jsgl/Delete" title="类型删除">
                     <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>删除
                 </button>
+                <button id="btn_delete" type="button" class="btn btn-danger" href="Jsgl/Glcd" title="关联菜单">
+                    关联菜单
+                </button>
             </div>
         </div>
         <table id="tb_departments"></table>
