--- a/SmartRestaurant/SmartRestaurant/Areas/Restaurant/Views/Yhgl/Index.cshtml
+++ b/SmartRestaurant/SmartRestaurant/Areas/Restaurant/Views/Yhgl/Index.cshtml
@@ -38,6 +38,9 @@
                 <button id="btn_delete" type="button" class="btn btn-default" href="Yhgl/Delete" title="类型删除">
                     <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>删除
                 </button>
+                <button id="btn_delete" type="button" class="btn btn-danger" href="Yhgl/Sqjs" title="授权角色">
+                    授权角色
+                </button>
             </div>
         </div>
         <table id="tb_departments"></table>
